--- a/src/app/Docente/docenteasignacion/docenteasignacion.component.html
+++ b/src/app/Docente/docenteasignacion/docenteasignacion.component.html
@@ -1,1 +1,40 @@
-<p>docenteasignacion works!</p>
+<h2 class="header header-efx">{{titulo}}</h2>
+<div class="widget-box widget-color-dark ui-sortable-handle hide" id="widget-box-11">
+    <div class="widget-header">
+        
+    </div>
+</div>
+<div style="clear: both;"></div>
+<table class="table table-striped table-bordered font-small" style="width:100%; margin-bottom:0px;">
+    <thead class="thead-inverse">
+        <tr>
+            <th class="center" style="width: 30px;"></th>
+            <th class="center" style="width: 100px;">Acciones</th>
+            <th class="center" style="width: 30px;">ID</th>
+            <th>Título</th>
+            <th>N° Est</th>
+            <th>Convocatoria</th>
+            <th>Estado</th>
+            <th>Tipo</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let item of listDocenteAsigna; index as i">
+            <td class="center" style="width: 30px;">{{i + 1}}</td>
+            <td class="actions center" style="width: 100px">
+                <button type="button" name="detalle" [routerLink]="['/dashboard/docentehitodetalle', item.idTem]"  class="btn btn-primary btn-xs" title="Ver Detalle">
+                    <i class="fa fa-search"></i>
+                </button>
+                <button type="button" name="editar" [routerLink]="['/dashboard/docentehitodesarrollo', item.idTem]"  class="btn btn-primary btn-xs" title="Ver Evolución">
+                    <i class="fa fa-pencil-square-o"></i>
+                </button>
+            </td>
+            <td>{{item.idTem}}</td>
+            <td>{{item.temNombre}}</td>
+            <td>{{item.temNumEst}}</td>
+            <td>{{item.convocatoria.conNombre}}</td>
+            <td>{{item.nombreEstado}}</td>
+            <td>{{item.nombreTipo}}</td>
+        </tr>
+    </tbody>
+</table>
