--- a/src/app/Estudiante/estudiantehito/estudiantehito.component.html
+++ b/src/app/Estudiante/estudiantehito/estudiantehito.component.html
@@ -25,7 +25,7 @@
         <tr>
             <th class="center" style="width: 30px;"></th>
             <th class="center" style="width: 100px;">Acciones</th>
-            <th class="center" style="width: 30px;">ID</th>
+            <th class="center hide" style="width: 30px;">ID</th>
             <th>Título</th>
             <th>N° Est</th>
             <th>Convocatoria</th>
@@ -44,7 +44,7 @@
                     <i class="fa fa-pencil-square-o"></i>
                 </button>
             </td>
-            <td>{{item.idTem}}</td>
+            <td class="hide">{{item.idTem}}</td>
             <td>{{item.temNombre}}</td>
             <td>{{item.temNumEst}}</td>
             <td>{{item.convocatoria.conNombre}}</td>
