--- a/src/app/Utes/asignacion/utesasignacionrevisordialog.component.html
+++ b/src/app/Utes/asignacion/utesasignacionrevisordialog.component.html
@@ -1,63 +1,41 @@
-<!-- <h2 class="header header-efx">{{titulo}}</h2> -->
 <form>
     <div class="form-group row">
-        <div class="col-sm-10">
-            <div class="profile-info-name">Tipo :</div>
-            <div class="profile-info-value"><span >{{tema.nombreTipo}}</span></div>
-        </div>
-        <div class="col-sm-10">
-            <div class="profile-info-name">Autor :</div>
-            <div class="profile-info-value"><span >{{tema.persona.perApellido}} {{tema.persona.perNombre}}</span></div>
-        </div>
-        <div class="col-sm-10">
-            <div class="profile-info-name" style="float: left;">Revisor :</div>  
-            <div class="col-sm-8">        
-                <select class="form-control" name="miselect" [(ngModel)]="presolicitud.pslIdEstado">
-                    <option [value]="item.id" *ngFor="let item of listEstadoPresolicitudAccion">{{item.titulo}}</option>
-                </select>
-            </div>  
+        <label for="temIdTipo" class="col-sm-2 col-form-label">Tipo</label>
+        <div class="col-sm-8">
+            <select class="form-control" name="miselect" [(ngModel)]="tema.temIdTipo">
+                <option [value]="item.id" *ngFor="let item of listTipoDocumento">{{item.nombre}}</option>
+            </select>
         </div>
     </div>
-    <div style="clear: both;"></div>
-    <div class="col-sm-12">
-    <table class="table table-striped table-bordered tbl_chk font-small" style="width:100%; margin-bottom:0px;">
-        <thead class="thead-inverse">
-            <tr>
-                <th class="center" style="width: 30px;"></th>
-                <th>Requisito</th>
-                <th>Respuesta</th>
-                <th scope="col" class="fixed-side center">
-                    Validación <br> 
-                    <input id="chk_all_row" class="chk_all_row" type="checkbox" value="">                                                                   
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let item of presolicitudRespuestas">
-                <td class="center" style="width: 30px;"></td>
-                <td>{{item.cuestionario.cuePregunta}}</td>
-                <td>{{item.resValor}}</td>
-                <td class="actions fixed-side center">
-                    <input id="row_{{item.cuestionario.idCue}}" name="chk_row" type="checkbox" value="{{item.cuestionario.idCue}}" (change)="onChange(item.cuestionario.idCue, $event.target.checked)">                                                                   
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    </div>
-    <div style="clear: both;"></div>
     <div class="form-group row">
-        <label for="pslObservacion" class="col-sm-2 col-form-label">Observación</label>
-        <div class="col-sm-12">
-            <textarea class="form-control" name="pslObservacion" [(ngModel)]='presolicitud.pslObservacion' rows="6"></textarea>
+        <label class="col-sm-2 col-form-label">Autor</label>
+        <div class="col-sm-8">
+            <label>{{tema.persona.perApellido}} {{tema.persona.perNombre}}</label>
         </div>
     </div>
-    <input type="hidden" value="" name="id" [(ngModel)]="presolicitud.idPsl">
-    <br/>
+    <div class="form-group row">
+        <label for="temIdTipo" class="col-sm-2 col-form-label">Revisor</label>
+        <div class="col-sm-8">
+            <select class="form-control" name="miselect2">
+                <option [value]="item.idUsr" *ngFor="let item of listUsuarioRevisor">{{item.persona.perNombre}}</option>
+            </select>
+        </div>
+    </div>
+    
+    
+    <input type="hidden" value="" name="id" [(ngModel)]="tema.idTem">
     <div class="form-group row">
         <div class="col-sm-12 center">
-            <button class="btn btn-primary" role="button" (click)='create()'>
-                <i class="fa fa-save"></i> GUARDAR
+            <!-- <button class="btn btn-primary" role="button" (click)='create()' *ngIf="!tema.idTem else elseBlock">
+                <i class="fa fa-save"></i> CREAR
             </button>
+            <ng-template #elseBlock>
+                <button class="btn btn-primary" role="button" (click)='update()'>
+                    <i class="fa fa-save"></i> EDITAR
+                </button>
+            </ng-template> -->
         </div>
     </div>
 </form>
+
+
