--- a/src/app/Utes/asignacion/asignacion.component.html
+++ b/src/app/Utes/asignacion/asignacion.component.html
@@ -10,7 +10,7 @@
         <div id="tab-mistemas" class="tab-pane">
             <div id="cont-tab-mistemas">
                 <div class="widget-header">
-                    <button type="button" name="nuevo" (click)='openDialog3()' class="btn btn-primary btn-xs" title="Publicar Temas Seleccionados">
+                    <button type="button" name="nuevo" (click)='updateTemaEstado()' class="btn btn-primary btn-xs" title="Publicar Temas Seleccionados">
                         <i class="fa fa-pencil-square-o"></i> Publicar Temas
                     </button>
                 </div>
